fix wrong size export dropdown after click

--- a/src/editor/components/modals/ScreenshotModal/ScreenshotModal.module.scss
+++ b/src/editor/components/modals/ScreenshotModal/ScreenshotModal.module.scss
@@ -68,6 +68,7 @@
 
         .dropdown {
           max-width: fit-content;
+          min-width: 240px;
         }
       }
     }
